prusti-tests/tests/counterexamples/verify-fail/simple-specs/ensures-false.rs
use prusti_contracts::*;

/* COUNTEREXAMPLE : 
    fn main():
        empty
*/

#[ensures(false)] //~ ERROR postcondition
fn main() {
}
